<resources>
    <string name="app_name">SBG SALES APP</string>
    <string name="businessTitle">Sale Receipt</string>
    <string name="productName">Enter Product Name</string>
    <string name="quantity">Enter Quantity</string>
    <string name="unitPrice">Unit Price</string>
    <string name="invoiceGen">SBG</string>
    <string name="item_list">LISTS OF SELECTED ITEMS </string>
    <string name="print">Print</string>
    <string name="delete">Clear</string>

    <string name="add">Add </string>
    <string name="list">View List</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="bizTitle">Point Of Sales</string>
    <string name="reciept">SBG Integrated Systems</string>

</resources>
