<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sbg_background"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapseBar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:fitsSystemWindows="true"
                android:minHeight="54dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleMarginTop="155dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="98dp"
                    android:layout_height="119dp"
                    android:layout_gravity="center"
                    android:background="@drawable/display"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#3d3d3d"
                    app:cardElevation="12dp">


                    <TextView

                        android:id="@+id/textchange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/businessTitle"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    app:cardElevation="30dp"
                  >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/productId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/custom_input"
                                android:hint="@string/productName"
                                android:inputType="textCapWords"
                                android:padding="12dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginTop="30dp"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/quantityId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/custom_input"
                                android:hint="@string/quantity"
                                android:inputType="number"
                                android:padding="12dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/unitPrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/custom_input"
                                android:hint="@string/unitPrice"
                                android:inputType="number"
                                android:padding="12dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:layout_marginBottom="40dp"/>
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    app:cardElevation="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <Button
                            android:id="@+id/addId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@color/colorPrimary"
                            android:text="@string/add"
                            android:textColor="@color/whiteText"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"/>

                        <Button
                            android:id="@+id/listId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@color/colorPrimary"
                            android:text="@string/list"
                            android:textColor="@color/whiteText"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="30dp"/>



                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_layout"
        app:itemTextColor="@color/colorAccent"
        app:menu="@menu/nav_menu_items" />
</androidx.drawerlayout.widget.DrawerLayout>